<resources>
    <string name="app_name">Server_Hyeonjeong</string>
    <string name="name">이름 : 박현정</string>
    <string name="age">나이 : 24</string>
    <string name="mbti">MBTI : ESFJ</string>
    <string name="btn_home_follower">Follower</string>
    <string name="btn_home_repository">Repository</string>
    <string name="tv_detail_name">NAME : </string>
    <string name="tv_detail_desc">DESCRIPTION : </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">환경설정</string>
    <string name="AutoLogout">자동로그인 해제</string>
    <string name="names">hyeonjeong</string>
    <string name="login">park</string>
</resources>