<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/iv_home_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/womans"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.3" />
        <TextView
            android:id="@+id/iv_home_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_home_image"/>
        <TextView
            android:id="@+id/iv_home_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_home_name"/>
        <TextView
            android:id="@+id/iv_home_mbti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mbti"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_home_age" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_follower"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_home_follower"
        android:textSize="15sp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_profile"
        app:layout_constraintEnd_toStartOf="@+id/btn_repository"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/btn_repository"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:textSize="15sp"
        android:text="@string/btn_home_repository"
        android:backgroundTint="#AD84F6"
        app:layout_constraintTop_toBottomOf="@+id/cl_profile"
        app:layout_constraintStart_toEndOf="@+id/btn_follower"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fcv_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_repository"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>